--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,6 +6,6 @@
 appTitle=App Title
 
 #YDES: Application description
-appDescription=A Sample SAP Fiori application for demo.
+appDescription=A Sample SAP Fiori application for training session demo.
 #XTIT: Main view title
 title=App Title
